# ostree-rs-ext

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: rust.yml
ci/: fcos-e2e.sh  installdeps.sh  priv-integration.sh
cli/: Cargo.toml
cli/src/: main.rs
dev/: Dockerfile
lib/: Cargo.toml
lib/src/: chunking.rs  cli.rs  cli_bootc.rs  fixture.rs  lib.rs  variant_utils.rs
lib/src/container/: asynctar.rs  client.rs  deploy.rs  export.rs  import.rs  mod.rs  oci.rs  store.rs  unencapsulate.rs
lib/src/tar/: export.rs  write.rs
lib/tests/it/: main.rs
