[package]
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ostree-ext"
readme = "README.md"
repository = "https://github.com/ostreedev/ostree-ext"
version = "0.1.0"
description = "Extension APIs for OSTree"

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"
camino = "1.0.4"
fn-error-context = "0.1.1"
gio = "0.9.1"
glib = "0.10.3"
glib-sys = "0.10.1"
gvariant = "0.4.0"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2.92"
reqwest = "0.11.3"
openat = "0.1.20"
openat-ext = "0.2.0"
openssl = "0.10.33"
ostree = { version = "0.11.0", features = ["v2021_2" ]}
os_pipe = "0.9.2"
ostree-sys = "0.7.2"
tar = "0.4.33"
tokio = { version = "1", features = ["full"] }
subprocess = "0.2.0"
cjson = { version = "0.1.1" }
flate2 = {version = "1.0.20"}
futures = { version = "0.3.13" }
phf = { version = "0.8.0", features = ["macros"] }
nix = { version = "0.20.0" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64" }
oci-distribution = "0.6.0"
tempfile = "3.2.0"

[dev-dependencies]
clap = "2.33.3"
indoc = "1.0.3"
sh-inline = "0.1.0"
structopt = "0.3.21"
